k8/url-mapping/ingress-iks.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    # kubernetes.io/ingress.class: 'nginx'
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/force-ssl-redirect: 'true' ## (1)リダイレクト
    ingress.bluemix.net/rewrite-path: "serviceName=nginx-svc rewrite=/;serviceName=java-svc rewrite=/"
    ingress.bluemix.net/redirect-to-https: "True" ## (1)リダイレクト
spec:
  tls:                             ## (2)暗号化設定セクション  表7 IngressTLS参照
  - hosts:                         ## (3)ドメイン名
    - iks2.jp-tok.containers.appdomain.cloud
    secretName: iks2               ## (4)サーバー証明書
  rules:
  - host: iks2.jp-tok.containers.appdomain.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: helloworld-svc
          servicePort: 8080
      - path: /apl2
        backend:
          serviceName: nginx-svc
          servicePort: 9080
  - host: xyz.sample.com
    http:
      paths:
      - path: /
        backend:
          serviceName: java-svc
          servicePort: 9080
